--- a/src/main/resources/templates/favorite_list.html
+++ b/src/main/resources/templates/favorite_list.html
@@ -6,14 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
-	<title>お気に入り一覧</title>
+	<title>お気に入り登録植物一覧</title>
 </head>
 
 <body style="background-color: rgb(208, 210, 208); font-family: 'Cormorant Garamond', serif;">
 
 	<nav th:replace="~{commonP :: navbar}"></nav>
+	
 
-	<div class="container my-5">
+	<div class="container my-5"></div>
 		<header class="d-flex justify-content-between align-items-center mb-4">
 			<h2>お気に入り登録植物一覧</h2>
 		</header>
@@ -47,7 +48,6 @@
 				</tbody>
 			</table>
 		</div>
-
 	</div>
 
 	<footer class="text-center py-3">
@@ -56,6 +56,7 @@
 
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </body>
 
 </html>
