--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -14,6 +14,11 @@
 					<div class="container d-flex justify-content-center">
 						<div class="form-container">
 
+							<div th:if="${duplicateError}" class="alert alert-danger text-start">
+								[[${duplicateError}]]
+							</div>
+
+
 							<div class="form-group mb-3 text-start">
 								<label for="formLocation">Category</label>
 								<select th:field="*{location.id}" id="formLocation" class="form-control text-start">
@@ -78,7 +83,7 @@
 									alt="プレビュー画像" class="img-fluid"
 									style="max-width: 200px; border: 1px solid #ddd; padding: 5px;">
 							</div>
-							
+
 							<script>
 								document.addEventListener("DOMContentLoaded", function () {
 									let imagePathInput = document.getElementById("formImagePath");
@@ -103,4 +108,5 @@
 	<!-- /.container -->
 	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </body>
+
 </html>
