--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,8 +87,8 @@
 	</main>
 	<section>
 		<h6>植物に出逢う</h6>
-		<p>人の心を豊かにする -GREEN and FLOWER-<br>
-			リラックス効果  脳や視神経の疲れを癒し  ストレスを和らげる
+		<p>心を豊かにする -GREEN and FLOWER-<br>
+			自然の力を感じる瞬間、心のバランスを整え、豊かな感性を育むことができるのです。
 		</p>
 	</section>
 
