--- a/src/main/resources/templates/commonP.html
+++ b/src/main/resources/templates/commonP.html
@@ -35,8 +35,10 @@
                 aria-expanded="false"
               >home</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-botanic" th:href="@{/home}" >home</a></li>
-                 <li><a class="dropdown-botanic" th:href="@{/botanicalsList}" >List</a></li>
+                <li><a class="dropdown-item" th:href="@{/home}" >home</a></li>
+                 <li><a class="dropdown-item" th:href="@{/botanicalsList}" >List</a></li>
+                 <li><a class="dropdown-item" th:href="@{/botanicals/favorite/list}">お気に入り一覧</a></li>
+
               </ul>
             </li>
             <!-- ログアウトボタン 
