--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -50,8 +50,8 @@
                 [[${session.authAdmin?.name}]]さん
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-plant" th:href="@{/admin/logout}">ログアウト</a></li>
-                <li><a class="dropdown-plant" th:href="@{/home}">home</a></li>
+                <li><a class="dropdown-item" th:href="@{/admin/logout}">ログアウト</a></li>
+                <li><a class="dropdown-item" th:href="@{/home}">home</a></li>
               </ul>
             </li>
           </ul>
