--- a/src/main/resources/templates/favorite_save.html
+++ b/src/main/resources/templates/favorite_save.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css}" rel="stylesheet">
 	<link th:href="@{/css/style.css}" rel="stylesheet">
-	<title>お気に入り登録植物一覧</title>
+	<title>お気に入り登録</title>
 </head>
 
 <body style="background-color: rgb(216, 218, 216); font-family: 'Cormorant Garamond', serif;">
