--- a/src/main/resources/templates/commonP.html
+++ b/src/main/resources/templates/commonP.html
@@ -33,7 +33,7 @@
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
-              >home</a>
+              >To</a>  <!--destination -->
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" th:href="@{/home}" >home</a></li>
                  <li><a class="dropdown-item" th:href="@{/botanicalsList}" >List</a></li>
