--- a/src/main/resources/templates/commonP.html
+++ b/src/main/resources/templates/commonP.html
@@ -36,7 +36,7 @@
               >To</a>  <!--destination -->
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" th:href="@{/home}" >home</a></li>
-                 <li><a class="dropdown-item" th:href="@{/botanicalsList}" >List</a></li>
+                 <li><a class="dropdown-item" th:href="@{/botanicalsList}" >BotanicList</a></li>
                  <li><a class="dropdown-item" th:href="@{/botanicals/favorite/list}">お気に入り一覧</a></li>
 
               </ul>
