--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,7 +88,7 @@
 	<section>
 		<h6>植物に出逢う</h6>
 		<p>心を豊かにする -GREEN and FLOWER-<br>
-			自然の力を感じる瞬間、心のバランスを整え、豊かな感性を育むことができるのです。
+			自然の力を感じる瞬間<br>心のバランスを整え、豊かな感性を育むことができるのです
 		</p>
 	</section>
 
