--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,10 @@
 
 
 	<div>
-		<a th:href="@{/botanicalsList}" class="custom-button">BotanicList</a>
+		<a th:href="@{/botanicalsList}" class="custom-button">Botanic List</a>
+	</div>
+	<div>
+		<a th:href="@{/user/login}" class="custom-button3">User Login</a>
 	</div>
 	<div>
 		<a th:href="@{/}" class="custom-button2">Admin Login</a>
