--- a/src/main/resources/templates/botanicalsList.html
+++ b/src/main/resources/templates/botanicalsList.html
@@ -62,18 +62,20 @@
 			<input type="submit" value="検索" class="btn btn-outline-secondary">
 		</form>
 
-		<form th:action="@{/botanicals/category}" method="get" class="d-flex align-items-center" style="gap: 10px; width: 100%;  padding: 0px; border-radius: 5px;">
-    <select name="category" id="category" style="width: 200px; padding: 8px; border: 1px solid rgb(149, 128, 43); border-radius: 5px;">
-        <option value="観葉植物">観葉植物</option>
-        <option value="生花">生花</option>
-        <option value="植栽">植栽</option>
-        <option value="オージープランツ">オージープランツ</option>
-        <option value="草花">草花</option>
-        <option value="その他">その他</option>
-    </select>
-    <button type="submit" class="btn btn-outline-secondary">検索</button>
-    <p>選択中のカテゴリー: <span th:text="${selectedCategory}" class="selected-category"></span></p>
-</form>
+		<form th:action="@{/botanicals/category}" method="get" class="d-flex align-items-center"
+			style="gap: 10px; width: 100%;  padding: 0px; border-radius: 5px;">
+			<select name="category" id="category"
+				style="width: 200px; padding: 8px; border: 1px solid rgb(149, 128, 43); border-radius: 5px;">
+				<option value="観葉植物">観葉植物</option>
+				<option value="生花">生花</option>
+				<option value="植栽">植栽</option>
+				<option value="オージープランツ">オージープランツ</option>
+				<option value="草花">草花</option>
+				<option value="その他">その他</option>
+			</select>
+			<button type="submit" class="btn btn-outline-secondary">検索</button>
+			<p>選択中のカテゴリー: <span th:text="${selectedCategory}" class="selected-category"></span></p>
+		</form>
 
 		<div class="row">
 			<!-- 植物リストの繰り返し表示 -->
@@ -88,7 +90,8 @@
 
 							<!-- "お気に入り" ボタンを th:each の内側に配置 -->
 							<div class="d-flex justify-content-end">
-								 <a th:href="@{/botanicals/favorite/{id}(id=${botanic.id})}" style="color: rgb(149, 128, 43); font-size: 20px; text-decoration: none">♡</a>
+								<a th:href="@{/botanicals/favorite/{id}(id=${botanic.id})}"
+									style="color: rgb(149, 128, 43); font-size: 20px; text-decoration: none">♡</a>
 							</div>
 						</div>
 					</div>
@@ -107,7 +110,7 @@
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-		
+
 </body>
 
 </html>
