--- a/src/main/resources/templates/commonP.html
+++ b/src/main/resources/templates/commonP.html
@@ -10,7 +10,7 @@
   <body>
   	<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" th:href="@{/botanicals}">BotanicEncounters</a>
+        <a class="navbar-brand" th:href="@{/home}">BotanicEncounters</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,11 +33,12 @@
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
-              >To</a>  <!--destination -->
+                th:text="${user != null ? user.name : 'ゲスト'}"
+              ></a>  
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" th:href="@{/home}" >home</a></li>
                  <li><a class="dropdown-item" th:href="@{/botanicalsList}" >BotanicList</a></li>
-                 <li><a class="dropdown-item" th:href="@{/botanicals/favorite/list}">お気に入り一覧</a></li>
+                 <li><a class="dropdown-item" th:href="@{/favorite/list}">favoriteList</a></li>
 
               </ul>
             </li>
