--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 		<a th:href="@{/user/login}" class="custom-button3">User Login</a>
 	</div>
 	<div>
-		<a th:href="@{/}" class="custom-button2">Admin Login</a>
+		<a th:href="@{/admin}" class="custom-button2">Admin Login</a>
 	</div>
 
 	<main class="container">
