--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -51,7 +51,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" th:href="@{/admin/logout}">ログアウト</a></li>
-                <li><a class="dropdown-item" th:href="@{/home}">home</a></li>
+                <li><a class="dropdown-item" th:href="@{/}">home</a></li>
               </ul>
             </li>
           </ul>
