--- a/src/main/resources/templates/commonP.html
+++ b/src/main/resources/templates/commonP.html
@@ -1,55 +1,47 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-  <head th:fragment="head">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
-    <link th:href="@{/css/style.css}" rel="stylesheet" />
-    <title>BotanicEncounters</title>
-  </head>
-  <body>
-  	<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" th:href="@{/home}">BotanicEncounters</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto">
-			  <!-- Homeのドロップダウン -->
-            <li class="nav-botanic dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                th:text="${user != null ? user.name : 'ゲスト'}"
-              ></a>  
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" th:href="@{/home}" >home</a></li>
-                 <li><a class="dropdown-item" th:href="@{/botanicalsList}" >BotanicList</a></li>
-                 <li><a class="dropdown-item" th:href="@{/favorite/list}">favoriteList</a></li>
 
-              </ul>
-            </li>
-            <!-- ログアウトボタン 
+<head th:fragment="head">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+	<link th:href="@{/css/style.css}" rel="stylesheet" />
+	<title>BotanicEncounters</title>
+</head>
+
+<body>
+	<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container">
+			<a class="navbar-brand" th:href="@{/}">BotanicEncounters</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ms-auto">
+					<!-- Homeのドロップダウン -->
+					<li class="nav-botanic dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false"
+							th:text="${user != null ? user.name : 'ゲスト'}"></a>
+
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" th:href="@{/}">home</a></li>
+							<li><a class="dropdown-item" th:href="@{/botanicalsList}">BotanicList</a></li>
+							<li><a class="dropdown-item" th:href="@{/favorite/list}">favoriteList</a></li>
+
+						</ul>
+					</li>
+					<!-- ログアウトボタン 
                     <li class="nav-item">
                         <a class="nav-link text-secondary fw-bold" th:href="@{/logout}">ログアウト</a>-->
-          </ul>
-        </div>
-      </div>
-      <!-- /.container -->
-    </nav>
+				</ul>
+			</div>
+		</div>
+		<!-- /.container -->
+	</nav>
 
-  </body>
+</body>
+
 </html>
